# typer-shell

./: .bumpversion.cfg  .gitignore  Justfile  README.md  demo.py  params.yaml  pyproject.toml  requirements.txt  test.py  typer_shell.py
demo/: demo.py  simple_demo.py
typer_shell/: __init__.py  samples.py  typer_shell.py  utils.py
