[project]
name = "typer-shell"
version = "1.0.1"
requires-python  = ">=3.9.0"
description = "A shell for typer apps with autocompletion and history"
authors = [
    {name= "Fergus Fettes", email="fergus <fergusfettes@gmail.com>"}
]
readme = "README.md"

dependencies = [
    "typer ~=0.16.0",
    "click >=8.1.0",
    "rich >=10.11.0",
    "click_shell ~=2.1",
    "pyyaml ~=6.0",
]

[tool.poetry]
packages = [{include = "typer_shell"}]

[tool.poetry.dependencies]
# All are currently in [project.dependencies].

# Use 'poetry install --with python_console'
# to support the interactive Python debug console.
[tool.poetry.group.python_console.dependencies]
ipython = "*"

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13,<0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
