[project]
name = "typer-shell"
version = "1.0.3"
description = "A shell for typer apps with autocompletion and history"
authors = [{ name = "Fergus Fettes", email = "fergusfettes@gmail.com" }]
requires-python = ">=3.9.0"
readme = "README.md"
dependencies = [
    "typer ~=0.16.0",
    "click >=8.1.0",
    "rich >=10.11.0",
    "click_shell ~=2.1",
    "pyyaml ~=6.0",
]

[dependency-groups]
python_console = ["ipython"]
dev = [
    "ipdb>=0.13.13,<0.14.0",
    "ruff>=0.1.0",
]

[tool.uv]
default-groups = [
    "python_console",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["typer_shell"]

[tool.hatch.build.targets.wheel]
include = ["typer_shell"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "B904",  # within `except` clause, raise exceptions with `raise ... from err`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
